vertices and edges throw shadow in edit mode #47891

Closed
opened 2016-03-22 19:10:23 +01:00 by silas reschke · 16 comments

System Information
Windows 10, NVIDIA GFORCE GTX 970

Blender Version
2.77

Short description of error
when blender render or blender game is set as renderer the vertices and edges in the viewport throw a shadow in edit mode when display mode "Material" is activated

Exact steps for others to reproduce the error

  1. set rendere to "Blender Render" or "Blender Game"
  2. add Mesh --> Monkey
  3. add a subsurf modifier to the Monkey
  4. set display mode to "Material"
  5. go into editmode and move some vertices around until you see a shadow on the faces of the Monkey
    Bug.blend
**System Information** Windows 10, NVIDIA GFORCE GTX 970 **Blender Version** 2.77 **Short description of error** when blender render or blender game is set as renderer the vertices and edges in the viewport throw a shadow in edit mode when display mode "Material" is activated **Exact steps for others to reproduce the error** 1. set rendere to "Blender Render" or "Blender Game" 2. add Mesh --> Monkey 3. add a subsurf modifier to the Monkey 4. set display mode to "Material" 4. go into editmode and move some vertices around until you see a shadow on the faces of the Monkey [Bug.blend](https://archive.blender.org/developer/F297823/Bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @silasReschke

Added subscriber: @silasReschke

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

I can confirm the issue with the uploaded file.

AMD Athlon II X3 455, Radeon R7 360, Win 7 SP1.

Loaded factory settings, tested with Software rendering too. (OpenGl32.dll)

Bug.jpg

I can confirm the issue with the uploaded file. AMD Athlon II X3 455, Radeon R7 360, Win 7 SP1. Loaded factory settings, tested with Software rendering too. (OpenGl32.dll) ![Bug.jpg](https://archive.blender.org/developer/F298087/Bug.jpg)

Sorry for the noise, forgot to mention the blender Builds. :(

Tested on:

version: 2.77 (sub 0), branch: master, commit date: 2016-03-18 06:50, hash: cc12fc1

version: 2.77 (sub 0), branch: master, commit date: 2016-03-22 17:47, hash: b0a7e77

Sorry for the noise, forgot to mention the blender Builds. :( Tested on: version: 2.77 (sub 0), branch: master, commit date: 2016-03-18 06:50, hash: cc12fc1 version: 2.77 (sub 0), branch: master, commit date: 2016-03-22 17:47, hash: b0a7e77

Added subscriber: @sindra1961

Added subscriber: @sindra1961

ray shadow of the sun lamp seems to be reflected.

ray shadow of the sun lamp seems to be reflected.

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

It looks like this issue is presented in 2.76 as well and it looks like that it isn't limited to object with Subdivision Surface: add a plane above the monkey (as a separate object), enter Edit Mode and delete the polygon so you will have only edges left. Move these edges around in Edit Mode and you will notice that edges drop shadow on a monkey. It is easily reproducible with just two planes or any other objects.
Looks like the key point here is that loose edges in Edit Mode drop shadow from the Sun lamp in Material 3D View mode.

It looks like this issue is presented in 2.76 as well and it looks like that it isn't limited to object with Subdivision Surface: add a plane above the monkey (as a separate object), enter Edit Mode and delete the polygon so you will have only edges left. Move these edges around in Edit Mode and you will notice that edges drop shadow on a monkey. It is easily reproducible with just two planes or any other objects. Looks like the key point here is that loose edges in Edit Mode drop shadow from the Sun lamp in Material 3D View mode.

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin

@MikeErwin, maybe it's something you can help us with? :)

@MikeErwin, maybe it's something you can help us with? :)

Added subscriber: @gwentiv

Added subscriber: @gwentiv

Note that "Hidden Wire" in the "shading" tab of the 3D viewport properties works a charm: the shadows disappear :-)

Note that "Hidden Wire" in the "shading" tab of the 3D viewport properties works a charm: the shadows disappear :-)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 81a477f4dc

This issue was referenced by 81a477f4dc999918ba66413a286f5a0b1c0c4e79
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47891
No description provided.