Fix T47891: Edges throw shadow in edit mode